--- a/nuxeo-webdav/src/test/resources/config/nuxeo.properties
+++ b/nuxeo-webdav/src/test/resources/config/nuxeo.properties
@@ -4,7 +4,7 @@ org.nuxeo.ecm.instance.description=Nuxeo WebEngine Server
 
 # product config
 org.nuxeo.ecm.product.name=Nuxeo WebEngine
-org.nuxeo.ecm.product.version=5.3.0
+org.nuxeo.ecm.product.version=5.4.2-I20110404_0115
 
 # runtime remoting config
 org.nuxeo.runtime.server.enabled=true
