--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.platform</groupId>
     <artifactId>nuxeo-features-parent</artifactId>
-    <version>5.4.2-SNAPSHOT</version>
+    <version>5.4.2-I20110404_0115</version>
   </parent>
 
   <groupId>org.nuxeo.ecm.platform</groupId>
@@ -15,7 +15,7 @@
   <packaging>pom</packaging>
 
   <properties>
-    <nuxeo.wss.version>5.4.2-SNAPSHOT</nuxeo.wss.version>
+    <nuxeo.wss.version>5.4.2-I20110404_0115</nuxeo.wss.version>
   </properties>
 
   <modules>
