--- a/nuxeo-platform-placeful-theme/pom.xml
+++ b/nuxeo-platform-placeful-theme/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.platform</groupId>
     <artifactId>nuxeo-services-parent</artifactId>
-    <version>5.4.1.1-SNAPSHOT</version>
+    <version>5.4.1-HF01</version>
   </parent>
 
   <artifactId>nuxeo-platform-placeful-theme</artifactId>
