--- a/pom.xml
+++ b/pom.xml
@@ -209,6 +209,11 @@
         <scope>provided</scope>
       </dependency>
       <dependency>
+        <groupId>javax.persistence</groupId>
+        <artifactId>persistence-api</artifactId>
+        <version>1.0</version>
+      </dependency>
+      <dependency>
         <groupId>javax.servlet.jsp</groupId>
         <artifactId>jsp-api</artifactId>
         <version>2.1</version>
@@ -451,13 +456,11 @@
           </exclusion>
         </exclusions>
       </dependency>
-      <!-- xercesImpl 2.9.1 uses xml-apis 1.3.04 -->
-      <!-- Other libraries use xml-apis 2.0.2 relocated to 1.0.b2 -->
       <dependency>
         <groupId>xml-apis</groupId>
         <artifactId>xml-apis</artifactId>
         <scope>provided</scope>
-        <version>1.0.b2</version>
+        <version>1.3.04</version>
       </dependency>
       <dependency>
         <groupId>jmimemagic</groupId>
@@ -2555,6 +2558,11 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-war-plugin</artifactId>
           <version>2.1.1</version>
+        </plugin>
+        <plugin>
+          <groupId>com.springsource.bundlor</groupId>
+          <artifactId>com.springsource.bundlor.maven</artifactId>
+          <version>1.0.0.RELEASE</version>
         </plugin>
       </plugins>
     </pluginManagement>
