--- a/nuxeo-core-storage-sql/nuxeo-core-storage-sql/pom.xml
+++ b/nuxeo-core-storage-sql/nuxeo-core-storage-sql/pom.xml
@@ -1,4 +1,6 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project
+  xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
@@ -105,7 +107,6 @@
       <artifactId>slf4j-log4j12</artifactId>
     </dependency>
 
-
     <dependency>
       <groupId>org.nuxeo.runtime</groupId>
       <artifactId>nuxeo-runtime-test</artifactId>
@@ -132,10 +133,9 @@
     <!-- needed for database-specific tests <dependency> <groupId>org.apache.derby</groupId>
       <artifactId>derby</artifactId> <scope>test</scope> </dependency> <dependency> <groupId>postgresql</groupId>
       <artifactId>postgresql</artifactId> <scope>test</scope> </dependency> <dependency>
-      <groupId>mysql</groupId> <artifactId>mysql-connector-java</artifactId> <version>5.1.6</version>
-      <scope>test</scope> </dependency> <dependency> <groupId>net.sourceforge.jtds</groupId>
-      <artifactId>jtds</artifactId> <version>1.2.2</version> <scope>test</scope> </dependency>
-      <dependency> <groupId>com.oracle</groupId> <artifactId>ojdbc14</artifactId> <version>10.2.0.3.0</version>
+      <groupId>mysql</groupId> <artifactId>mysql-connector-java</artifactId> <scope>test</scope>
+      </dependency> <dependency> <groupId>net.sourceforge.jtds</groupId> <artifactId>jtds</artifactId>
+      <scope>test</scope> </dependency> <dependency> <groupId>com.oracle</groupId> <artifactId>ojdbc14</artifactId>
       <scope>test</scope> </dependency> -->
   </dependencies>
 
