--- a/nuxeo-user-dashboard/nuxeo-user-dashboard-opensocial/pom.xml
+++ b/nuxeo-user-dashboard/nuxeo-user-dashboard-opensocial/pom.xml
@@ -30,6 +30,14 @@
       <groupId>org.nuxeo.ecm.platform</groupId>
       <artifactId>nuxeo-platform-webapp-base</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.nuxeo.ecm.automation</groupId>
+      <artifactId>nuxeo-automation-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.nuxeo.ecm.platform</groupId>
+      <artifactId>nuxeo-platform-jbpm-api</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>org.jboss.seam</groupId>
@@ -38,6 +46,11 @@
     <dependency>
       <groupId>javax.faces</groupId>
       <artifactId>jsf-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>net.sf.json-lib</groupId>
+      <artifactId>json-lib</artifactId>
+      <classifier>jdk15</classifier>
     </dependency>
   </dependencies>
 
