--- a/pom.xml
+++ b/pom.xml
@@ -2546,9 +2546,9 @@
           <version>0.7.1</version>
         </plugin>
         <plugin>
-          <groupId>org.jvnet.maven.incrementalbuild</groupId>
+          <groupId>net.java.maven-incremental-build</groupId>
           <artifactId>incremental-build-plugin</artifactId>
-          <version>1.3</version>
+          <version>1.4</version>
         </plugin>
         <plugin>
           <artifactId>maven-jarsigner-plugin</artifactId>
