--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,8 @@
     <jboss.ejb.version>3.0-RC8</jboss.ejb.version>
     <javax.ejb.version>3.0-RC8</javax.ejb.version>
     <nuxeo.distribution.tools.version>1.9.3</nuxeo.distribution.tools.version>
+    <!-- compliance property since removal of maven-nuxeo-plugin execution -->
+    <eclipseVersion>${project.version}</eclipseVersion>
   </properties>
 
   <dependencyManagement>
@@ -819,12 +821,12 @@
         <artifactId>jetty</artifactId>
         <version>${jetty.mortbay.version}</version>
         <scope>provided</scope>
-	<exclusions>
-	  <exclusion>
-	    <groupId>org.mortbay.jetty</groupId>
-	    <artifactId>servlet-api-2.5</artifactId>
-	  </exclusion>
-	</exclusions>
+        <exclusions>
+          <exclusion>
+            <groupId>org.mortbay.jetty</groupId>
+            <artifactId>servlet-api-2.5</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
         <groupId>org.mortbay.jetty</groupId>
@@ -2200,19 +2202,20 @@
           <doUpdate>false</doUpdate>
         </configuration>
       </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-nuxeo-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>eclipsize-version</id>
-            <phase>process-sources</phase>
-            <goals>
-              <goal>eclipse-version</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
+      <!-- DEPRECATED: ECR provides usable versions for RCP -->
+      <!-- <plugin> -->
+      <!-- <groupId>org.apache.maven.plugins</groupId> -->
+      <!-- <artifactId>maven-nuxeo-plugin</artifactId> -->
+      <!-- <executions> -->
+      <!-- <execution> -->
+      <!-- <id>eclipsize-version</id> -->
+      <!-- <phase>process-sources</phase> -->
+      <!-- <goals> -->
+      <!-- <goal>eclipse-version</goal> -->
+      <!-- </goals> -->
+      <!-- </execution> -->
+      <!-- </executions> -->
+      <!-- </plugin> -->
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>jboss-packaging-maven-plugin</artifactId>
