--- a/nuxeo-core-event-jms/pom.xml
+++ b/nuxeo-core-event-jms/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.core</groupId>
     <artifactId>nuxeo-core-parent</artifactId>
-    <version>5.4.2-I20110404_0115</version>
+    <version>5.4.2-I20110404_0115.1-SNAPSHOT</version>
   </parent>
 
   <artifactId>nuxeo-core-event-jms</artifactId>
