--- a/nuxeo-jboss-deployer/pom.xml
+++ b/nuxeo-jboss-deployer/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.nuxeo.runtime</groupId>
     <artifactId>nuxeo-runtime-parent</artifactId>
-    <version>5.4.2-I20110404_0115</version>
+    <version>5.4.2-I20110404_0115.1-SNAPSHOT</version>
   </parent>
 
   <groupId>org.nuxeo.runtime</groupId>
