--- a/nuxeo-runtime-management/pom.xml
+++ b/nuxeo-runtime-management/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.nuxeo.runtime</groupId>
     <artifactId>nuxeo-runtime-parent</artifactId>
-    <version>5.4.2-I20110404_0115</version>
+    <version>5.4.2-I20110404_0115.1-SNAPSHOT</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
