--- a/nuxeo-user-dashboard/nuxeo-user-dashboard-jsf/pom.xml
+++ b/nuxeo-user-dashboard/nuxeo-user-dashboard-jsf/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.platform</groupId>
     <artifactId>nuxeo-user-dashboard-parent</artifactId>
-    <version>5.4.2-I20110404_0115</version>
+    <version>5.4.2-I20110404_0115.1-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
