--- a/nuxeo-gwt-richtexteditor/pom.xml
+++ b/nuxeo-gwt-richtexteditor/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <artifactId>nuxeo-opensocial-parent</artifactId>
     <groupId>org.nuxeo.ecm.opensocial</groupId>
-    <version>5.4.2-I20110404_0115</version>
+    <version>5.4.2-I20110404_0115.1-SNAPSHOT</version>
   </parent>
 
   <artifactId>nuxeo-gwt-richtexteditor</artifactId>
