--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 
   <modules>
     <module>nuxeo-platform-audio-core</module>
+    <module>nuxeo-platform-audio-jsf</module>
   </modules>
 
   <dependencyManagement>
@@ -24,6 +25,11 @@
       <dependency>
         <groupId>org.nuxeo.ecm.platform</groupId>
         <artifactId>nuxeo-platform-audio-core</artifactId>
+        <version>${pom.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.nuxeo.ecm.platform</groupId>
+        <artifactId>nuxeo-platform-audio-jsf</artifactId>
         <version>${pom.version}</version>
       </dependency>
 
