--- a/nuxeo-opencmis-tests/pom.xml
+++ b/nuxeo-opencmis-tests/pom.xml
@@ -10,7 +10,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.core</groupId>
     <artifactId>nuxeo-chemistry</artifactId>
-    <version>5.4.2-I20110404_0115</version>
+    <version>5.4.2-I20110404_0115.1-SNAPSHOT</version>
   </parent>
 
   <artifactId>nuxeo-opencmis-tests</artifactId>
