--- a/nuxeo-distribution-dm/ftest/selenium/pom.xml
+++ b/nuxeo-distribution-dm/ftest/selenium/pom.xml
@@ -24,8 +24,7 @@
   <dependencies>
     <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
-      <artifactId>selenium-server</artifactId>
-      <classifier>standalone</classifier>
+      <artifactId>selenium-server-standalone</artifactId>
     </dependency>
   </dependencies>
 
@@ -39,9 +38,7 @@
           <artifactItems>
             <artifactItem>
               <groupId>org.seleniumhq.selenium</groupId>
-              <artifactId>selenium-server</artifactId>
-              <version>2.0b3</version>
-              <classifier>standalone</classifier>
+              <artifactId>selenium-server-standalone</artifactId>
               <overWrite>true</overWrite>
               <outputDirectory>.</outputDirectory>
               <destFileName>selenium-server.jar</destFileName>
